# advent-of-code-2024

./: .gitignore  Cargo.toml
.github/workflows/: codspeed.yml
benches/: my_benchmark.rs
rust-runner/: Cargo.toml  README.md  bench_part1.rs  bench_part2.rs  output-1.txt  output-2.txt
rust-runner/src/: lib.rs
src/: day3.py  day3.rs  day4.rs  day4.s  day5.rs  hash.py  lib.rs  mask.py  test.py  test.txt
